@@ -1,5 +1,8 @@
 %li[assigned]{ highlightable(dom_id(assigned, :tools)) }
-  .strip Other
+  - if assigned.category
+    .strip{:class => assigned.category}= Setting.task_category[assigned.category.intern]
+  - else
+    .strip{:style => "color:white"} Other
   %div
     .tools{ hidden, :id => dom_id(assigned, :tools) }
       %small
