@@ -2,8 +2,8 @@
 
 .title Completed Tasks
 .log#log
-  - unless @tasks.values.flatten.empty?
+  - if !@tasks.values.flatten.empty? || all_filtered_out?(:completed)
     - Setting.task_completed.each do |value, key|
-      = render :partial => "list", :locals => { :key => key, :value => value }
+      %div{ :id => "list_#{key}" }= render :partial => "list", :locals => { :key => key, :value => value }
   - else
     %div You don't have any completed tasks yet.
